more cleanup, changed color scheme, started organizing & renaming sections

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,14 +9,26 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Real name Guillaume Bouvier. I'm a Programmer, Game Developper in any language from C/C++/C# to Python, Ruby and even Java. I worked for 8 years in a Mobile Video Game Company in Canada where I worked on everything from Physics, Graphics, AI to Camera, UI and everything in-between.</p>
+                    <p>Solar rogue is a space exploration adventure in the purest tradition of roguelike. Featuring procedurally generated solar systems, perma-death, tactical turned-based gameplay and a variety of ships, planets and ennemy to challenge!</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>I am looking for new challenges. I moved to Japan where I'm hoping to release my own products on as many platform as possible as well as taking up any contract or remote work that might fly my way. Don't hesitate to contact me if you have any questions.</p>
+                    <p>The game will be available on PC from Itch.io and Steam. On Android on the Google Play Store and for iOS on the App Store.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://github.com/Ombarus" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Checkout my GitHub
+                        <i class="fa fa-itch-io"></i> Itch.io
+                    </a>
+					
+                    <a href="https://github.com/Ombarus" class="btn btn-lg btn-outline">
+                        <i class="fa fa-steam"></i> Steam
+                    </a>
+					
+                    <a href="https://github.com/Ombarus" class="btn btn-lg btn-outline">
+                        <i class="fa fa-android"></i> Android
+                    </a>
+					
+                    <a href="https://github.com/Ombarus" class="btn btn-lg btn-outline">
+                        <i class="fa fa-app-store-ios"></i> iOS
                     </a>
                 </div>
             </div>
