--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,12 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
 
+	<meta property="og:title" content="Solar Rogue">
+	<meta property="og:description" content="A Nethack Space Adventure">
+	<meta property="og:image" content="https://www.ombarus.com/img/portfolio/solarrogue.png">
+	<meta property="og:url" content="https://www.ombarus.com/solarrogue.html">
+	<meta property="og:site_name" content="Ombarus Dev">
+	
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link rel="stylesheet" href="{{ "/style.css" }}">
 
