--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -73,11 +73,19 @@ hr.star-primary {
 
 hr.star-primary:after {
     color: #{{ site.color.secondary }};
-    background-color: #fff;
+    background-color: #{{ site.color.primary-alt }};
 }
 
 .img-centered {
     margin: 0 auto;
+}
+
+#portfolio {
+	background: #{{ site.color.primary-alt }};
+}
+
+#contact {
+	background: #{{ site.color.primary-alt }};
 }
 
 header {
