more formatting adjustment. Tweaked some text

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,19 +16,19 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://github.com/Ombarus" class="btn btn-lg btn-outline">
-                        <i class="fa fa-itch-io"></i> Itch.io
+                        <i class="fab fa-itch-io"></i> Itch.io
                     </a>
 					
                     <a href="https://github.com/Ombarus" class="btn btn-lg btn-outline">
-                        <i class="fa fa-steam"></i> Steam
+                        <i class="fab fa-steam"></i> Steam
                     </a>
 					
                     <a href="https://github.com/Ombarus" class="btn btn-lg btn-outline">
-                        <i class="fa fa-android"></i> Android
+                        <i class="fab fa-android"></i> Android
                     </a>
 					
                     <a href="https://github.com/Ombarus" class="btn btn-lg btn-outline">
-                        <i class="fa fa-app-store-ios"></i> iOS
+                        <i class="fab fa-app-store-ios"></i> iOS
                     </a>
                 </div>
             </div>
