added prev & next button to screenshots, adjusted download buttons and fixed url to a 'coming soon!'

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,20 +14,19 @@
                 <div class="col-lg-4">
                     <p>The game will be available on PC from Itch.io and Steam. On Android on the Google Play Store and for iOS on the App Store.</p>
                 </div>
+			</div>
+			<div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/Ombarus" class="btn btn-lg btn-outline">
+                    <a href="#" class="btn btn-lg btn-outline comingsoon">
                         <i class="fab fa-itch-io"></i> Itch.io
                     </a>
-					
-                    <a href="https://github.com/Ombarus" class="btn btn-lg btn-outline">
+                    <a href="#" class="btn btn-lg btn-outline comingsoon">
                         <i class="fab fa-steam"></i> Steam
                     </a>
-					
-                    <a href="https://github.com/Ombarus" class="btn btn-lg btn-outline">
+                    <a href="#" class="btn btn-lg btn-outline comingsoon">
                         <i class="fab fa-android"></i> Android
                     </a>
-					
-                    <a href="https://github.com/Ombarus" class="btn btn-lg btn-outline">
+                    <a href="#" class="btn btn-lg btn-outline comingsoon">
                         <i class="fab fa-app-store-ios"></i> iOS
                     </a>
                 </div>
