--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -8,13 +8,24 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
+            <div class="container-fluid">
+                <div class="row row-no-gutters">
+							
+					{% if post.previous %}
+						<div class="col-xs-2 prev">
+							<a style="width:100%;height:100%;" href="#portfolioModal-{{ post.previous.modal-id }}" class="portfolio-link" data-toggle="modal" data-dismiss="modal">
+								<i class="fa fa-chevron-left"></i>
+							</a>
+						</div>
+					{% endif %}
+                    <div class="col-xs-8 col-xs-offset-2">
                         <div class="modal-body">
                             <h2>{{ post.title }}</h2>
                             <hr class="star-primary">
+						
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+							
+						
                             {% if post.description %}
                                 <p>{{ post.description }}</p>
                             {% endif %}
@@ -52,6 +63,13 @@
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
+					{% if post.next %}
+						<div class="col-xs-2 next">
+							<a href="#portfolioModal-{{ post.next.modal-id }}" class="portfolio-link" data-toggle="modal" data-dismiss="modal">
+								<i class="fa fa-chevron-right"></i>
+							</a>
+						</div>
+					{% endif %}
                 </div>
             </div>
         </div>
