--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,10 +19,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#portfolio">Screenshots</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Media</a>
+                        <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
