--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,7 +22,7 @@
                         <a href="#portfolio">Screenshots</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#about">Download</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
