added layout to direct link to solar rogue privacy policy

--- a/_includes/policy.html
+++ b/_includes/policy.html
@@ -1,17 +1,14 @@
-<div class="portfolio-modal modal fade" id="privacydicedm" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-content">
-		<div class="close-modal" data-dismiss="modal">
-			<div class="lr">
-				<div class="rl">
-				</div>
-			</div>
-		</div>
-		<div class="container">
+ <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center intro-text"  style="margin-top:75px;">
+                    <h2>Privacy policy</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="modal-body">
-						<h2>Privacy policy</h2>
-						<hr class="star-primary">
 						<p>
 						Dice DM App for iOS and Android
 						</p><p>
@@ -41,10 +38,8 @@
 						Do you comply with the Children’s Online Privacy Protection Act (COPPA)?
 						Yes. We do not solicit nor gather any data from children under the age of 13. If a parent or guardian becomes aware that his or her child has provided us with information without their consent, he or she should contact us.
 						</p>
-						<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-</div>
+</section>
