--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -11,9 +11,9 @@
             <div class="container-fluid">
                 <div class="row row-no-gutters">
 							
-					{% if post.previous %}
+					{% if post.next %}
 						<div class="col-xs-2 prev">
-							<a style="width:100%;height:100%;" href="#portfolioModal-{{ post.previous.modal-id }}" class="portfolio-link" data-toggle="modal" data-dismiss="modal">
+							<a style="width:100%;height:100%;" href="#portfolioModal-{{ post.next.modal-id }}" class="portfolio-link" data-toggle="modal" data-dismiss="modal">
 								<i class="fa fa-chevron-left"></i>
 							</a>
 						</div>
@@ -63,9 +63,9 @@
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
-					{% if post.next %}
+					{% if post.previous %}
 						<div class="col-xs-2 next">
-							<a href="#portfolioModal-{{ post.next.modal-id }}" class="portfolio-link" data-toggle="modal" data-dismiss="modal">
+							<a href="#portfolioModal-{{ post.previous.modal-id }}" class="portfolio-link" data-toggle="modal" data-dismiss="modal">
 								<i class="fa fa-chevron-right"></i>
 							</a>
 						</div>
