--- a/_includes/policy.html
+++ b/_includes/policy.html
@@ -10,33 +10,11 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="modal-body">
 						<p>
-						Dice DM App for iOS and Android
+						Solar Rogue, All platform
 						</p><p>
-						This privacy policy governs your use of the software application Dice DM (“Application”) for mobile devices that was created by Ombarus (Guillaume Bouvier). This privacy policy was last updated on October 1, 2018. Our privacy policy may change from time to time for any reason. If we make any material changes to our policies, we will place a prominent notice on our website or application. If you have any questions or concerns about our privacy policies, feel free to contact us at any time.
+						Let's keep it simple. The only data I can know about you is what the platform publisher gives me (Steam, iOS, Android, Itch.io, etc.). I don't personally gather any information watsoever of any kind of any sort by any mean.
 						</p><p>
-						What information does the Application obtain and how is it used?
-						The Application does not collect or transmit any personally identifiable information about you, such as your name, address, phone number or email address.
-						</p><p>
-						How do you handle location data?
-						The Application does not use or collect any data related to your geographic location.
-						</p><p>
-						Can users see their personal data?
-						The Application itself does not collect, transmit, or maintain user data.
-						</p><p>
-						Do you share personal information?
-						As no personal information is collected, transmitted, or maintained by the Application, we do not share personal information with anyone.
-						</p><p>
-						Do advertising companies collect data?
-						Our free applications use advertising currently provided by Admob and anonymous statistical information is reported to them so they can see whether
-						their adverts are effective. <a href="https://policies.google.com/privacy">Click for more information about google's privacy policy.</a>
-						</p><p>
-						Do you use vendors or analytics providers?
-						Our free applications use In-app Purchases which will disable all advertising served through the application. Payments will be processed through
-						Google Play or iTunes app store from which you originally downloaded the application. You may access the applicable purchase rules and policies
-						directly from the app stores.
-						</p><p>
-						Do you comply with the Children’s Online Privacy Protection Act (COPPA)?
-						Yes. We do not solicit nor gather any data from children under the age of 13. If a parent or guardian becomes aware that his or her child has provided us with information without their consent, he or she should contact us.
+						If I ever release an update that changes this situation. This policy will be updated and I will mention it in the release note for the update.
 						</p>
 					</div>
 				</div>
