--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
                         <h3>{{ site.footer.location }}</h3>
                         <p>
                             {% for adress in site.address %}
-                                {{ adress.line }} <br>
+                                <a href="https://www.ombarus.com/" style="color:#fff">{{ adress.line }}</a><br>
 		                    {% endfor %}
                         </p>
                     </div>
