link to steam page coming soon

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,7 +20,7 @@
                     <a href="#" class="btn btn-lg btn-outline comingsoon">
                         <i class="fab fa-itch-io"></i> Itch.io
                     </a>
-                    <a href="#" class="btn btn-lg btn-outline comingsoon">
+                    <a href="https://store.steampowered.com/app/1301410/Solar_Rogue/" class="btn btn-lg btn-outline">
                         <i class="fab fa-steam"></i> Steam
                     </a>
                     <a href="#" class="btn btn-lg btn-outline comingsoon">
