Update to released links

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,21 +12,21 @@
                     <p>Solar rogue is a space exploration adventure in the purest tradition of roguelike. Featuring procedurally generated solar systems, perma-death, tactical turned-based gameplay and a variety of ships, planets and ennemy to challenge!</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>The game will be available on PC from Itch.io and Steam. On Android on the Google Play Store and for iOS on the App Store.</p>
+                    <p>The game is available on PC from Itch.io and Steam. On Android on the Google Play Store and for iOS on the App Store.</p>
                 </div>
 			</div>
 			<div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline comingsoon">
+                    <a href="https://ombarus.itch.io/solar-rogue" class="btn btn-lg btn-outline">
                         <i class="fab fa-itch-io"></i> Itch.io
                     </a>
                     <a href="https://store.steampowered.com/app/1301410/Solar_Rogue/" class="btn btn-lg btn-outline">
                         <i class="fab fa-steam"></i> Steam
                     </a>
-                    <a href="#" class="btn btn-lg btn-outline comingsoon">
+                    <a href="https://play.google.com/store/apps/details?id=com.ombarus.solarrogue" class="btn btn-lg btn-outline">
                         <i class="fab fa-android"></i> Android
                     </a>
-                    <a href="#" class="btn btn-lg btn-outline comingsoon">
+                    <a href="https://apps.apple.com/us/app/solar-rogue/id1497230319" class="btn btn-lg btn-outline">
                         <i class="fab fa-app-store-ios"></i> iOS
                     </a>
                 </div>
