trying to get twitter cards to work

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,10 +10,13 @@
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
 
 	<meta property="og:title" content="Solar Rogue">
-	<meta property="og:description" content="A Nethack Space Adventure">
+	<meta property="og:description" content="A Roguelike Space Adventure">
 	<meta property="og:image" content="https://www.ombarus.com/img/portfolio/solarrogue.png">
-	<meta property="og:url" content="https://www.ombarus.com/solarrogue.html">
-	<meta property="og:site_name" content="Ombarus Dev">
+	<meta property="og:url" content="http://solar-rogue.netlify.com/">
+	<meta property="og:site_name" content="Solar Rogue">
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:site" content="@ombarus1" />
+	<meta name="twitter:creator" content="@ombarus1" />
 	
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link rel="stylesheet" href="{{ "/style.css" }}">
