changed netlify link to new dns

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 	<meta property="og:title" content="Solar Rogue">
 	<meta property="og:description" content="A Roguelike Space Adventure">
 	<meta property="og:image" content="https://www.ombarus.com/img/portfolio/solarrogue.png">
-	<meta property="og:url" content="http://solar-rogue.netlify.com/">
+	<meta property="og:url" content="https://www.solar-rogue.com/">
 	<meta property="og:site_name" content="Solar Rogue">
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:site" content="@ombarus1" />
