--- a/_includes/about.html
+++ b/_includes/about.html
@@ -31,5 +31,10 @@
                     </a>
                 </div>
             </div>
+			<div class="row">
+				<div class="text-center"><p>
+				Choosen in Handpicked Strategy game on <a href="https://gameskeys.net/product/solar-rogue/" style="color:#fff">gamekeys.net</a>
+				</p></div>
+			</div>
         </div>
     </section>
